# soar-vpn

./: .gitignore  README.md  index.html  install.sh  package.json  pnpm-lock.yaml  vite.config.js
docs/: 发版指南.md
scripts/: build-mac.sh  publish.sh  server-init.sh
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/wireguard/: bash  wg  wg-helper.sh  wg-quick
src-tauri/src/: config.rs  diag.rs  error.rs  lib.rs  main.rs  rules.rs  settings.rs  updater.rs  wg.rs
src/components/: ConfigEditor.svelte  Onboarding.svelte  Sidebar.svelte  StatusBar.svelte  TrafficChart.svelte  UpdateBanner.svelte
src/lib/: api.js  store.js
src/pages/: Home.svelte  Logs.svelte  Profiles.svelte  Rules.svelte  Settings.svelte
src/styles/: global.css
