[package]
name = "wg-vpn"
version = "0.3.1"
description = "Soar — minimalist WireGuard VPN client"
authors = ["mengfan"]
edition = "2021"

[lib]
name = "wg_vpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
